src/components/Navbar/Navbar.css
.navigation {
  font-family: var(--ff-header);
  background-color: var(--clr-primary-200);
}
.navbar {
  display: flex;
  align-items: center;
  justify-content: space-between;

  max-width: 1140px;

  padding: var(--spacing-sm) var(--spacing-lg);
  margin: 0 auto;
}

/* navbar left side */
.navbar .logo {
  height: 16px;
  cursor: pointer;
  margin-right: var(--spacing-lg);
  will-change: transform;
  transition: transform var(--std-transition);
}
.navbar .logo:hover {
  transform: scale(1.05);
}

/* navbar center  */

.navbar-top-menu {
  width: 50vw;
  max-width: 60%;
}

.navbar nav ul {
  display: inline-flex;
  justify-content: flex-start;
  gap: var(--spacing-md);
}
.navbar nav ul li .link {
  font-family: var(--ff-header);
  font-size: var(--ff-size-400);
  color: var(--clr-primary-900);
  text-wrap: nowrap;

  cursor: pointer;
  position: relative;

  text-decoration: none;
}
.navbar nav ul li .link::before {
  content: "";
  height: 2px;
  width: 0%;

  position: absolute;

  bottom: 0;

  background-color: var(--clr-primary-900);

  transition: width var(--std-transition);
}
.navbar nav ul li .link.active::before {
  width: 100%;
}
.navbar nav ul li .link:not(.active):hover::before,
.navbar nav ul li .link:not(.active):focus-visible::before {
  width: 100%;
}

/* navbar right side  */
.navbar-right-side {
  display: flex;
  align-items: center;
  gap: 10px;
}

.navbar-right-side-btns {
  display: flex;
  gap: 14px;
  align-items: center;
}

.btns-icon {
  width: 25px;
  height: 25px;

  margin-top: 0.375rem;
  cursor: pointer;
}
/* wishlist */

/* shopping cart icon */

.shopping-cart-icon {
  position: relative;
}
.shopping-cart-item-count {
  display: grid;
  place-items: center;

  font-size: calc(var(--fs-400) / 2);
  color: var(--clr-primary-900);

  width: 15px;
  height: 15px;
  border-radius: 50%;

  border: 1px solid var(--clr-primary-900);
  background-color: var(--clr-primary-200);

  position: absolute;
  right: -4px;
  bottom: 3px;
}

/* phone mail icon  */
.mail-phone-icon-container {
  position: relative;
}
.mail-phone-icon-container .phone-icon {
  background-color: var(--clr-primary-200);
  border-top-right-radius: 10px;

  position: absolute;
  left: -3px;
  bottom: 3px;
}

.contact-us-dropdown-container {
  display: flex;
  align-items: center;
  gap: 2px;

  padding: 0.3em 0.275em;

  position: relative;
}
.dropdown-arrow-icon {
  margin-top: 0.375rem;

  width: 16px;
  height: 16px;

  cursor: pointer;

  transform: rotate(0);
  transition: transform var(--std-transition);
}
.contact-us-dropdown-container:hover .dropdown-arrow-icon,
.contact-us-dropdown-container:focus-within .dropdown-arrow-icon {
  transform: rotate(180deg);
}
.dropdown-contact-us {
  padding: var(--spacing-sm) calc(var(--spacing-lg) * 2);
  padding-left: calc(var(--spacing-md) / 2);

  display: flex;

  position: absolute;
  top: 90%;
  right: 0;

  background-color: var(--clr-primary-200);

  box-shadow: -2px -2px 5px 0.5px rgb(0 0 0 / 0.2);

  transform: translateY(-10%);
  transform-origin: top center;
  opacity: 0;
  pointer-events: none;
  transition: all var(--std-transition);
  z-index: var(--z-dropdown);
}
/* dropdown appear on hover  */
.contact-us-dropdown-container:focus-within .dropdown-contact-us,
.contact-us-dropdown-container:hover .dropdown-contact-us,
.dropdown-contact-us:focus {
  transform: scaleY(1);
  opacity: 1;
  pointer-events: all;
}
.dropdown-contact-us div p:last-of-type {
  font-size: calc(var(--fs-500) / 2);
}

.dropdown-phone-icon {
  margin: 3px 7px;
}

.dropdown-phone-number {
  display: flex;
  gap: var(--spacing-sm);
  cursor: pointer;
}

.copy-icon {
  font-size: 1.1em;
  transition: transform 0.2s ease;
}

.copy-icon:active {
  transform: scale(1.1);
}

/* contact us button */

.sign-up-btn {
  margin-left: 0.125rem;
}

/* hamburger menu */
.hamburger-menu-sidebar-container {
  position: relative;

  display: none;

  margin-left: var(--spacing-sm);
  padding-block: var(--spacing-sm);
}

.hamburger-menu {
  width: 25px;
  height: 24px;

  border: none;
  appearance: none;
  background: none;

  left: 1px;

  cursor: pointer;

  position: relative;
  z-index: calc(var(--z-sidebar) + 2);
}

.hamburger-menu span {
  display: block;
  width: 100%;
  height: 3px;

  background-color: var(--clr-primary-900);
  border-radius: 10px;

  position: relative;

  transition: background-color var(--std-transition);
  transition-duration: 100ms;
}
.hamburger-menu span::before,
.hamburger-menu span::after {
  content: "";
  width: 100%;
  height: 100%;

  background-color: var(--clr-primary-900);
  border-radius: 10px;

  position: absolute;
  left: 0;

  transition: transform var(--std-transition);
}
.hamburger-menu span::before {
  top: -8px;
}
.hamburger-menu span::after {
  top: 8px;
}

.hamburger-menu.is-active span {
  background-color: rgb(0 0 0 / 0);
}
.hamburger-menu.is-active span::before {
  transform: translateY(8px) rotate(45deg);
  opacity: 1;
}
.hamburger-menu.is-active span::after {
  transform: translateY(-8px) rotate(-45deg);
  opacity: 1;
}

/* side navbar */
.sidebar-menu {
  position: fixed;
  top: 0;
  bottom: 0;
  right: 0;
  z-index: var(--z-sidebar);

  padding-top: 6em;

  width: 0;
  max-width: 300px;

  background-color: var(--clr-primary-200);
  box-shadow: -2px -2px 3px 0px rgb(0 0 0 / 0.2);

  transition: width ease-in-out 800ms;
}
.sidebar-menu.is-active {
  width: 40vw;
  transition: width ease-in 500ms;
}

@media (max-width: 994px) {
  .navbar {
    padding-inline: var(--spacing-md);
  }
  .navbar nav ul {
    padding-left: 2em;
    flex-direction: column;
  }
  .navbar-top-menu {
    display: none;
  }
  .hamburger-menu-sidebar-container {
    display: block;
  }
  .sidebar-icon-btns {
    display: none;
  }
}
@media (max-width: 777px) {
  .navbar-right-side-btns.top {
    display: none;
  }
  .sidebar-menu {
    width: 0;
    max-width: none;
  }
  .sidebar-menu.is-active {
    width: 100%;
    height: 100%;
  }
  .sidebar-icon-btns {
    padding-left: 2rem;
    margin-top: 2em;
    display: flex;
    gap: 1.252rem;
  }
  .dropdown-contact-us {
    left: -200%;
    top: 90%;

    margin: 5px;
    padding-right: 15em;

    box-shadow: -1px 4px 15px 5px rgb(0 0 0 / 0.05);
    transform: scaleY(1);

    transition: opacity var(--std-transition);
  }
}

@media (max-width: 554px) {
  .sidebar-icon-btns {
    flex-wrap: wrap;
    gap: 10px;
  }
  .sidebar-icon-btns .contact-us-dropdown-container > span {
    display: none;
  }
  .sidebar-icon-btns .contact-us-dropdown-container {
    padding-left: 0;
    margin-right: 5em;
  }
  .sidebar-icon-btns .contact-us-dropdown-container .dropdown-contact-us {
    position: relative;
    left: 0;

    opacity: 1;
    transform: scaleY(1);

    padding-left: 0;
    padding-block: 0.1em;

    box-shadow: none;
  }
  .dropdown-phone-icon {
    margin-left: 0;
  }
  .sidebar-icon-btns .sign-up-btn {
    width: 100%;
    margin-right: 2rem;
  }
  .sidebar-menu ul {
    width: 100%;
  }
}

@media screen and (max-height: 350px) {
  .sidebar-menu {
    padding-top: var(--spacing-md);
  }
}

